<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_rounded"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="22dp"
    android:layout_marginBottom="2dp"


    tools:context=".fragments.SearchFormFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_keyword"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_keyword"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"

        android:hint="@string/enter_the_keyword"
        android:textColorHint="@color/grey"
        android:textSize="16sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:text="@string/distance_miles"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="10"
        android:backgroundTint="@color/green"
        android:text="@string/_10"
        android:textColor="@color/white">

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        android:textColor="@color/green"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="311dp"
        android:layout_height="37dp"
        android:backgroundTint="@color/green"
        android:dropDownWidth="wrap_content"
        android:entries="@array/category_array"
        android:gravity="center_vertical|start"
        android:popupBackground="@color/black"
        android:popupElevation="16dp"
        android:spinnerMode="dropdown"

        />

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/location_switch"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:checked="false"
            android:textOff=""
            android:textOn=""
            android:thumbTint="@color/grey"
            android:trackTint="@color/white"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>


    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:hint="@string/enter_the_location"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:textSize="16sp"
        >
    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="-15dp"
        android:layout_marginTop="2dp"
        >
        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textAllCaps="false"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

        <Button

            android:backgroundTint="@color/clear_button_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textSize="20sp"
            android:paddingHorizontal="50dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:id="@+id/clear_btn"


            />


    </LinearLayout>




</LinearLayout>



